--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <a href="https://www.linkedin.com/in/asadullaazam?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link" data-platform="linkedin" target="_blank" rel="noopener">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="mailto:asadullap698@gmail.com" class="social-link" data-platform="email">
+                        <a href="mailto:Sayyad.azam1998@gmail.com" class="social-link" data-platform="email">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
@@ -143,8 +143,8 @@
                        <p class="text-gray-700 leading-relaxed text-justify">
   I am <b>Sayyad Mohammad Asadulla Azam</b>, a dynamic and results-driven 
   <b>Cybersecurity & Identity Access Management (IAM) Engineer</b> with 
-  <b>5.9+ years of proven experience</b>. I specialize in 
-  <b>Microsoft Entra ID (Azure AD)</b>, <b>Single Sign-On (SSO)</b>, 
+  <b>6+ years of proven experience</b>. I specialize in 
+  <b>Microsoft Entra ID (Azure AD)</b>, <b>SailPoint</b>, <b>Ping Identity</b>, <b>Single Sign-On (SSO)</b>, 
   <b>Multifactor Authentication (MFA)</b>, and <b>Conditional Access Policies</b>. 
   My expertise includes seamless integration of <b>Active Directory Federation Services (ADFS)</b> 
   and managing modern IAM frameworks such as <b>SCIM, OAuth, OpenID Connect, and SAML</b>. 
@@ -160,9 +160,10 @@
                         <div class="card-number">🚀</div>
   <h3 class="text-3xl font-bold mb-6">Achievements</h3>
 <ul class="list-disc ml-6 mb-6 text-gray-700 space-y-1">
-  <li><b>Award of Excellence:</b> Recognized by Infosys and Molina Healthcare for outstanding IAM contributions.</li>
-  <li><b>Delivery Ninja Award:</b> Acknowledged for consistent excellence under tight deadlines.</li>
-  <li>Multiple accolades for <b>problem-solving</b>, <b>team leadership</b>, and driving <b>IAM excellence</b>.</li>
+  <li><b>Award of Excellence by Molina Healthcare and Infosys</b> for outstanding contributions.</li>
+  <li><b>Infosys Insta Award</b> for solving complex issues and demonstrating exceptional problem solving skills.</li>
+  <li><b>Tower of the Team Award</b> for exceptional leadership and team performance.</li>
+  <li><b>Delivery Ninja Award</b> for consistently delivering outstanding results under tight deadlines.</li>
 </ul>
 
 <h3 class="text-3xl font-bold mb-6">Notable Projects</h3>
@@ -193,7 +194,7 @@
 
 <h3 class="text-3xl font-bold mt-8 mb-4">Contact Me</h3>
 <p class="text-gray-700">
-  📧 <b>Email:</b> <a href="mailto:asadullap698@gmail.com" class="text-blue-600 hover:underline">asadullap698@gmail.com</a><br>
+  📧 <b>Email:</b> <a href="mailto:Sayyad.azam1998@gmail.com" class="text-blue-600 hover:underline">Sayyad.azam1998@gmail.com</a><br>
   🔗 <b>LinkedIn:</b> <a href="https://www.linkedin.com/in/asadullaazam?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="text-blue-600 hover:underline" target="_blank">linkedin.com/in/asadullaazam</a>
 </p>
 
@@ -226,26 +227,30 @@
                         <div class="timeline-item">
                             <div class="timeline-dot">🚀</div>
                             <h4 class="text-xl font-semibold">Lead Senior IAM Engineer – Microsoft Entra ID (Azure AD)</h4>
-                            <p class="text-gray-600"><b>Quess Corp, Gurugram, India</b> (Client: National Australia Bank, Australia)<br>
+                            <p class="text-gray-600"><b>Quess Corp, Gurugram, India</b> (Client: National Australia Bank
+                                )<br>
                             <i>May 2025 – Present</i></p>
                             <ul class="list-disc ml-6 mt-2 text-gray-700 space-y-1">
-                                <li>Managing IAM operations including SSO, MFA, and Conditional Access policies.</li>
-                                <li>Integrated ADFS with Microsoft Entra ID for secure federated authentication.</li>
-                                <li>Handled P1 escalations, delivering swift resolutions for executives.</li>
-                                <li>Collaborated with global stakeholders on IAM governance and compliance.</li>
+                                <li>Successfully managing end-to-end Identity and Access Management (IAM) operations for National Australia Bank, including Single Sign-On (SSO), Multifactor Authentication (MFA), and Conditional Access policies.</li>
+                                <li>Spearheading integration and support of Active Directory Federation Services (ADFS), PingFederate, SailPoint and Microsoft Entra ID, ensuring seamless authentication and secure federated identity management.</li>
+                                <li>Handling high-priority (P1) incident escalations and providing swift resolutions for executive-level users, ensuring service reliability and operational continuity.</li>
+                                <li>Collaborating with global stakeholders to conduct regular IAM governance reviews, recommend security enhancements, and ensure adherence to best practices and compliance standards.</li>
                                 <li>Implemented SCIM, OAuth, OpenID Connect, and SAML protocols for secure APIs.</li>
                             </ul>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-dot">💼</div>
                             <h4 class="text-xl font-semibold">Senior Associate Consultant & Team Lead</h4>
-                            <p class="text-gray-600"><b>Infosys, New Delhi, India</b><br>
+                            <p class="text-gray-600"><b>Infosys, New Delhi, India</b> (Client: Molina Healthcare)<br>
                             <i>2021 – Present</i></p>
                             <ul class="list-disc ml-6 mt-2 text-gray-700 space-y-1">
-                                <li>Led IAM projects with Azure AD to enhance enterprise security posture.</li>
-                                <li>Implemented SSO, MFA, and Conditional Access across client environments.</li>
-                                <li>Provided P1 executive-level support ensuring operational continuity.</li>
-                                <li>Conducted IAM governance meetings to align with compliance standards.</li>
+                                <li>Led and delivered multiple IAM projects securing over 10,000 user identities by implementing SSO, MFA, and Conditional Access policies, resulting in a 30% improvement in authentication security.</li>
+                                <li>Onboarded applications to Sailpoint IIQ, developing and implementing Joiner, Mover, Leaver scenarios, Certifications, SOD, Approval, RBAC, and Reports in Sailpoint.</li>
+                                <li>Mentored other team members on daily tasks and helped them find an optimum solution to ongoing issues.</li>
+                                <li>Spearheaded integration of Active Directory Federation Services (ADFS), PingFederate, SailPoint and Entra ID, optimizing certificate management and trust configurations.</li>
+                                <li>Managed critical P1 incident responses for VIP users (Directors, VPs, C-level), ensuring rapid resolution and maintaining high service delivery standards.</li>
+                                <li>Orchestrated weekly governance calls with clients (e.g., Molina Healthcare, USA) to align security initiatives and drive operational improvements.</li>
+                                <li>Drove adoption of IAM best practices and advanced security protocols including SCIM, OAuth, OpenID Connect, and SAML.</li>
                             </ul>
                         </div>
                         <div class="timeline-item">
@@ -262,11 +267,12 @@
                         <div class="timeline-item">
                             <div class="timeline-dot">🖥️</div>
                             <h4 class="text-xl font-semibold">Service Desk Agent</h4>
-                            <p class="text-gray-600"><b>Collabera Technologies Pvt. Ltd., Noida, India</b><br>
+                            <p class="text-gray-600"><b>Collabera Technologies Pvt. Ltd., Noida, India</b> (Client: Standard Insurance Company)<br>
                             <i>2019 – 2020</i></p>
                             <ul class="list-disc ml-6 mt-2 text-gray-700 space-y-1">
-                                <li>Delivered IAM support to global clients ensuring compliance & security.</li>
-                                <li>Implemented access policies and maintained smooth IAM operations.</li>
+                                <li>Provided robust access and identity management support to global clients, ensuring compliance with security standards.</li>
+                                <li>Led daily incident management efforts, ensuring optimal server and service performance for high-priority users.</li>
+                                <li>Delivered exceptional technical support to executive clients, reinforcing reliability in IAM services.</li>
                             </ul>
                         </div>
                     </div>
@@ -293,15 +299,6 @@
                 <p class="section-subtitle">Technologies I love working with</p>
             </div>
             <div class="skills-grid">
-                <div class="skill-item fade-in">
-                    <div class="skill-icon">
-                        <i class="fab fa-adobe"></i>
-                    </div>
-                    <h3>Adobe Photoshop</h3>
-                    <div class="skill-progress">
-                        <div class="progress-bar" data-width="80%"></div>
-                    </div>
-                </div>
                 <div class="skill-item fade-in">
                     <div class="skill-icon">
                         <i class="fas fa-terminal"></i>
@@ -413,18 +410,9 @@
                 </div>
                 <div class="skill-item fade-in">
                     <div class="skill-icon">
-                        <i class="fas fa-network-wired"></i>
-                    </div>
-                    <h3>Network Security</h3>
-                    <div class="skill-progress">
-                        <div class="progress-bar" data-width="86%"></div>
-                    </div>
-                </div>
-                <div class="skill-item fade-in">
-                    <div class="skill-icon">
                         <i class="fab fa-microsoft"></i>
                     </div>
-                    <h3>Microsoft Azure</h3>
+                    <h3>Microsoft Entra ID</h3>
                     <div class="skill-progress">
                         <div class="progress-bar" data-width="88%"></div>
                     </div>
@@ -521,11 +509,38 @@
                 </div>
                 <div class="skill-item fade-in">
                     <div class="skill-icon">
-                        <i class="fab fa-python"></i>
+                        <i class="fas fa-chart-gantt"></i>
                     </div>
-                    <h3>Python</h3>
+                    <h3>Rally</h3>
                     <div class="skill-progress">
-                        <div class="progress-bar" data-width="78%"></div>
+                        <div class="progress-bar" data-width="85%"></div>
+                    </div>
+                </div>
+                <div class="skill-item fade-in">
+                    <div class="skill-icon">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
+                    <h3>Ping Identity</h3>
+                    <div class="skill-progress">
+                        <div class="progress-bar" data-width="87%"></div>
+                    </div>
+                </div>
+                <div class="skill-item fade-in">
+                    <div class="skill-icon">
+                        <i class="fas fa-ship"></i>
+                    </div>
+                    <h3>SailPoint</h3>
+                    <div class="skill-progress">
+                        <div class="progress-bar" data-width="89%"></div>
+                    </div>
+                </div>
+                <div class="skill-item fade-in">
+                    <div class="skill-icon">
+                        <i class="fab fa-adobe"></i>
+                    </div>
+                    <h3>Adobe Photoshop</h3>
+                    <div class="skill-progress">
+                        <div class="progress-bar" data-width="80%"></div>
                     </div>
                 </div>
                 <div class="skill-item fade-in">
