--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <div class="creator-brand">
-    <div class="brand-marquee">SAYYAD MOHAMMAD ASADULLA AZAM Portfolio
+    <div class="brand-marquee">SAYYAD MOHAMMAD ASADULLA AZAM 
  </div>
 </div>
 
