--- a/index.html
+++ b/index.html
@@ -346,15 +346,6 @@
                 </div>
                 <div class="skill-item fade-in">
                     <div class="skill-icon">
-                        <i class="fas fa-id-card"></i>
-                    </div>
-                    <h3>Microsoft Entra Verified ID</h3>
-                    <div class="skill-progress">
-                        <div class="progress-bar" data-width="82%"></div>
-                    </div>
-                </div>
-                <div class="skill-item fade-in">
-                    <div class="skill-icon">
                         <i class="fas fa-user-lock"></i>
                     </div>
                     <h3>Multi-factor Authentication</h3>
@@ -541,6 +532,15 @@
                     <h3>Adobe Photoshop</h3>
                     <div class="skill-progress">
                         <div class="progress-bar" data-width="80%"></div>
+                    </div>
+                </div>
+                <div class="skill-item fade-in">
+                    <div class="skill-icon">
+                        <i class="fas fa-book"></i>
+                    </div>
+                    <h3>Confluence</h3>
+                    <div class="skill-progress">
+                        <div class="progress-bar" data-width="84%"></div>
                     </div>
                 </div>
                 <div class="skill-item fade-in">
