--- a/index.html
+++ b/index.html
@@ -312,9 +312,18 @@
                     <div class="skill-icon">
                         <i class="fas fa-key"></i>
                     </div>
-                    <h3>OpenID Connect (OIDC)</h3>
+                    <h3>OIDC</h3>
                     <div class="skill-progress">
                         <div class="progress-bar" data-width="85%"></div>
+                    </div>
+                </div>
+                <div class="skill-item fade-in">
+                    <div class="skill-icon">
+                        <i class="fas fa-lock"></i>
+                    </div>
+                    <h3>OAuth 2.0</h3>
+                    <div class="skill-progress">
+                        <div class="progress-bar" data-width="86%"></div>
                     </div>
                 </div>
                 <div class="skill-item fade-in">
